flicker bug resolved

--- a/css/flipboard.css
+++ b/css/flipboard.css
@@ -57,6 +57,7 @@ div {
 	border-top-right-radius: 20px;
 	/*padding: 5% 0;*/
 	/*border: 2px solid;*/
+	/*display: none;*/
 }
 
 .lower-upper-container{
@@ -121,7 +122,7 @@ div {
 	border-bottom-left-radius: 20px;
 	border-bottom-right-radius: 20px;
 	/*padding: 5% 0;*/
-	display: none;
+	/*display: none;*/
 }
 
 .upper-lower-container{
